--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # python >= 3.9 && python <= 3.11
 graphviz==0.20
-numpy==1.24.2
+numpy>=1.24.2
 scikit_learn==1.2.2
 scipy==1.15.1
 setuptools==65.6.3
