--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 # python >= 3.7
 graphviz==0.20
-numpy>=1.24.2
+# numpy>=1.24.2
 scikit_learn==1.2.2
 scipy==1.15.1
 setuptools==65.6.3
@@ -9,7 +9,7 @@ numba==0.61.0
 pyinstrument
 bartz
 pmlb
-pandas==1.3.3
-matplotlib==3.4.3
-hydra-core==1.1.1
-omegaconf==2.1.1
+pandas
+matplotlib
+hydra-core
+omegaconf
