--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 *__pycache__
 *.egg-info/
 .venv
+venv/
 notebooks/*.dot
 notebooks/*.prof
 scripts/
 .hydra/hydra.yaml
 .DS_Store
 *.log
+benchmartks/*.csv
