--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ scripts/
 *.log
 notebooks/deprecated
 notebooks/results
+notebooks/bandit/temp_results
+notebooks/bandit/test_results
 notebooks/bandit/results
 notebooks/bandit/*.dot
 notebooks/bandit/*.prof
