Miscellaneous simulation improvements
Including
1. + random seed for basic agents
2. `update_state` criteria changed
3. + a lot of new scenarios
4. enhance logging

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,5 @@ notebooks/results
 notebooks/bandit/temp_results
 notebooks/bandit/test_results
 notebooks/bandit/results
-notebooks/bandit/*.dot
-notebooks/bandit/*.prof
+notebooks/bandit/*.png
 bart_playground/bandit/NeuralTS
