Add fallback to SVD when updating more than 1 tree at a time
By the way, slightly DRY the changes in `moves.py`

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ benchmarks/*.csv
 notebooks/deprecated/*
 notebooks/results/*
 notebooks/bandit/results
+notebooks/bandit/*.png
 bart_playground/bandit/NeuralTS
 *.pkl
