--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ notebooks/deprecated
 notebooks/results
 notebooks/bandit/results
 notebooks/bandit/*.png
+notebooks/bandit/data
 bart_playground/bandit/baselines
 .idea/*
 benchmarks/*.csv
