Remove the `benchmarks` and `notebooks` folder
Relevant code will be moved to a new repository for the paper

--- a/.gitignore
+++ b/.gitignore
@@ -8,13 +8,9 @@ scripts/
 .hydra/hydra.yaml
 .DS_Store
 *.log
-notebooks/deprecated
-notebooks/results
-notebooks/bandit/results
-notebooks/bandit/*.png
-notebooks/bandit/data
-bart_playground/bandit/baselines
 .idea/
 .vscode/
-benchmarks/*.csv
-notebooks/bandit/submit.pbs
+
+/benchmarks/
+/notebooks/
+bart_playground/bandit/baselines
