--- a/.gitignore
+++ b/.gitignore
@@ -2,18 +2,17 @@
 *.egg-info/
 .venv
 venv/
+
 *.dot
 *.prof
 scripts/
 .hydra/hydra.yaml
 .DS_Store
 *.log
+
+.vscode/*
 .idea/*
 .cursor/*
+
 benchmarks/*.csv
-notebooks/deprecated/*
-notebooks/results/*
-notebooks/bandit/results
-notebooks/bandit/*.png
-bart_playground/bandit/NeuralTS
 *.pkl
