--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # python >= 3.7
 graphviz==0.20
-# numpy>=1.24.2
-scikit_learn==1.2.2
+numpy==2.1.0
+scikit_learn==1.7.2
 scipy==1.15.1
 setuptools==65.6.3
 tqdm==4.62.3
