--- a/environment.yml
+++ b/environment.yml
@@ -5,15 +5,15 @@ channels:
 dependencies:
   - python=3.11
   - pip
-  - numpy
-  - scipy
-  - pandas
-  - scikit-learn
-  - numba
-  - arviz
-  - pydantic
-  - tqdm
+  - numpy=2.3.*
+  - scipy=1.16.*
+  - pandas=2.3.*
+  - scikit-learn=1.7.*
+  - numba=0.62.*
+  - arviz=0.22.*
+  - pydantic=2.11.*
+  - tqdm=4.67.*
   - matplotlib
-  - python-graphviz
+  - python-graphviz=0.21.*
   - pip:
       - ray[default]
