--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
             ${{ runner.os }}-pip-
       
       - name: Install project and test dependencies
-        run: pip install -e .[test]
+        run: pip install -e .[test-unit]
       
       - name: Run tests
         run: pytest tests/unit -v
